# SDATA-A

./: .gitignore  README.md  observablehq.config.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: news-intelligence.yml  observable-dashboard.yml
config/: companies.yaml  market_baskets.yaml  news_sources.json  prompt_templates.yaml  source_rank.yaml  sources.yaml
data/indices/latest/: aerospace_index.json
data/news/archive/: catalog.json  index.json
data/news/latest/: daily_index.json  event_timeline.json  fetch_statuses.json  items.json  items.jsonl  llm-input.json  news-report.xlsx  pipeline_result.json  report.md  run_metadata.json  summary.json  weekly-report.md
data/reports/latest/: daily_report.json  (+1 more)
docs/: README.md  index.html  llm-summary-report-agent-prompt.md  news-intelligence-architecture.md
docs/assets/: app.js  pipeline-data.js  styles.css
docs/demo/: index.html
docs/demo-next/: index.html
docs/observable/: index.html
frontend-disabled/legacy-main/: README.md  index.html
observable/: index.md  style.css
publishing/frontend/: README.md  index.html
scripts/: rebuild_archive_catalog.py
src/: news_pipeline.py
src/satellite_news/: __init__.py  __main__.py  config.py  pipeline.py  schema.py
tests/: test_daily_report.py  test_event_timeline.py  test_gdelt_fetcher.py  test_imports.py  test_index_snapshot.py  test_json_storage.py  test_news_pipeline.py  test_periodic_documents.py  test_prompt_templates.py  test_providers.py  test_quality_processor.py
tests/fixtures/: rss.xml
(+1044 files in other folders)
